﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$HeadURL$

2006-11-23 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd/scripts/move.js: fix a few js errors
    * pmd*.php: remove unneeded calls to getRelationsParam(); 
      verify if the internal relations are enabled before trying to
      create one

2006-11-22 Marc Delisle  <lem9@users.sourceforge.net>
    * Designer: get rid of pmd_config.php and pmd_get_info.php,
      rename pmd_session.php to pmd_common.php
    * Designer: missing messages

2006-11-21 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd_general.php, lang/*: added $strHelp

2006-11-20 Marc Delisle  <lem9@users.sourceforge.net>
    * french updates
    * remove references to phpMyDesigner.net, asked by Ivan
    * lang/*: typo: "formated" should be "formatted"

2006-11-19 Michal Čihař  <michal@cihar.com>
    * themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php,
      libraries/database_interface.lib.php: Fix typos (bug #1597137).
    * libraries/unzip.lib.php: Fix check for encrypted file (bug #1596304).
    * lang/czech: Update.

2006-11-19 Marc Delisle  <lem9@users.sourceforge.net>
    * pmd_general.php, pmd_get_info.php, pmd/scripts/move.js,
      pmd_relation_new.php, lang/*: support internal relations also
      on unique keys, not only on primary keys
    * scripts/upgrade.pl: bug #1599173, adapt for new filename structure,
      thanks to Linas Gricius
    * tbl_relation.php, lang/*: bug #1597019, wrong error message when foreign
      key is not the same data type as referenced key

2006-11-18 Michal Čihař  <michal@cihar.com>
    * Documentation.html, libraries/ip_allow_deny.lib.php: Define headers
      which to trust in configuration, thanks for help with this to Christian
      Schmidt, Peytz & Co.
    * libraries/PMA_List_Database.class.php: Fix XSS on database comment,
      thanks to laurent gaffié.

2006-11-18 Marc Delisle  <lem9@users.sourceforge.net>