@@ -1293,8 +1293,10 @@ ALTER TABLE `pma_column_comments`
     </dd>
 
     <dt id="cfg_ShowFunctionFields">$cfg['ShowFunctionFields'] boolean</dt>
-    <dd>Defines whether or not MySQL functions fields should be displayed in
-        edit/insert mode.</dd>
+    <dd>Defines whether or not MySQL functions fields should be initially 
+        displayed in edit/insert mode. Since version 2.10, the user can
+        toggle this setting from the interface.
+    </dd>
 
     <dt id="cfg_CharEditing">$cfg['CharEditing'] string</dt>
     <dd>Defines which type of editing controls should be used for CHAR and
